tests/js_error/regexp/unicode_sets/inverted_class_with_unicode_property_of_strings.js
/[^\p{Basic_Emoji}]/v;